upload and home autogeneration is functional, fixed overlap/styling issues

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,26 +1,84 @@
 @import "bulma";
 
+$Background: #bcd2d0;
+$FootHead:   #f96161;
+$NavEl:   	 #6fcb9f;
+
 .container {
-  width: 500px;
+  width: 750px;
   margin: 25px auto;
+};
+
+html{
+  background-color: $Background;
+}
+
+.nav-left{
+  background-color: $FootHead;
+}
+.nav-right{
+  background-color: $FootHead;
 }
 // =======================
 // BEGIN LAYOUT FORMATTING
 .wrapper {
   margin: 50px 0;
-}
-
-nav{
-  text-align: center;
+};
     nav a{
       margin: 5px;
-      font-weight: 500;
-    }
 };
 
+.pad-left{
+  padding-left: 14px;
+}
 footer{
+  margin-top: 20px;
   text-align: center;
   font-weight: 200;
-}
+  clear: both;
+};
 // END LAYOUT FORMATTING
 // =====================
+
+
+#home-card {
+  width: 233px;
+  float: left;
+  border-radius: 5px;
+  margin: 0 15px 15px 0;
+  cursor: pointer;
+  text-align: center;
+  &:nth-child(3n+1) {
+    margin-right: 0;
+  }
+  .title{
+    font-weight: 300;
+  }
+  .card-content{
+    height: 76px;
+    max-height: 76px;
+  }
+}
+.card:hover{
+}
+
+#detail-card{
+    padding-left: 125px;
+}
+#single{
+  width: 500px;
+  border-radius: 5px;
+  margin: 0 15px 15px 0;
+  cursor: pointer;
+  text-align: center;
+}
+
+  img{
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+  }
+
+
+textarea{
+  height: 120px;
+}
